[gd_scene load_steps=7 format=2]

[ext_resource path="res://SetMovement.gd" type="Script" id=1]
[ext_resource path="res://Crystal fail.png" type="Texture" id=2]
[ext_resource path="res://Rock Test 2.png" type="Texture" id=3]
[ext_resource path="res://Test-rock.png" type="Texture" id=4]
[ext_resource path="res://miner.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Walk"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Main:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 81, 48 ), Vector2( 100, 48 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Area1" type="Sprite" parent="."]
position = Vector2( 39, 111 )
texture = ExtResource( 2 )
offset = Vector2( -7, -11 )

[node name="Area2" type="Sprite" parent="."]
position = Vector2( 89, 43 )
texture = ExtResource( 2 )
offset = Vector2( -7, -11 )

[node name="Area3" type="Sprite" parent="."]
position = Vector2( 139, 43 )
texture = ExtResource( 2 )
offset = Vector2( -7, -11 )

[node name="Rock Test 2" type="Sprite" parent="."]
position = Vector2( 97, 101 )
texture = ExtResource( 3 )

[node name="Test-rock" type="Sprite" parent="."]
position = Vector2( 16, 52 )
texture = ExtResource( 4 )

[node name="Main" parent="." instance=ExtResource( 5 )]
position = Vector2( 81, 48 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Walk = SubResource( 1 )
